--- a/src/components/HelpUs.astro
+++ b/src/components/HelpUs.astro
@@ -9,7 +9,7 @@ import Slider from "./parts/Slider.astro";
   <div
     class="helpus__block helpus__block--playlist flex justify-center items-center flex-col shadow-lg"
   >
-    <h2 class="title-block my-6">Ayúdanos a llegar lejos</h2>
+    <h2 class="title-block my-6">Regalos</h2>
 
     <div class="circle-icon helpus__circle-icon">
       <span
@@ -37,15 +37,20 @@ import Slider from "./parts/Slider.astro";
   title="Ayúdanos a llegar lejos"
 >
   <div class="flex justify-center items-center flex-col" slot="body">
-    <p class="text-center mb-4">
-      Queremos llegar hasta las Islas Reunión y Mauricio. ¡Cualquier ayuda es
-      bienvenida!
-    </p>
+    <p class="text-center mb-4">Nos gustaría ir de Luna de Miel a Indonesia</p>
+    <p class="text-center mb-4">¡Ayudanos a hacerlo realidad!</p>
 
     <Slider />
 
-    <ClipBoard id="ibanInes" text="ES59 0182 5728 4102 0001 6391" name="Inés" />
-    <ClipBoard id="ibanCarlos" text="ES36 2100 1649 1302 0025 8411" name="Carlos"/>
+    <ClipBoard
+      id="ibanInes"
+      text="ES07 0081 2707 6000 0468 4273"
+      name="Transferencias"
+    />
+    <div style="height: 50px;"></div>
+    <p class="text-center mb-4">
+      También podeis hacernos bizum a cualquiera de los dos
+    </p>
   </div>
 </Modal>
 
