--- a/src/components/Party.astro
+++ b/src/components/Party.astro
@@ -25,7 +25,7 @@ import PreBoda from "./parts/PreBoda.astro";
     </div>
 
     <button id="openModalPreBoda" class="button-link party__button"
-      >Dónde es</button
+      >Informacion</button
     >
   </div>
 
@@ -43,7 +43,7 @@ import PreBoda from "./parts/PreBoda.astro";
     </div>
 
     <div class="party__text">
-      <p>¿Cuál es la canción que no debe faltar en la playlist de la fiesta?</p>
+      <p>¿Cuál es la canción que no debe faltar en la fiesta?</p>
     </div>
 
     <button id="openModalPlayList" class="button-link party__button"
@@ -69,8 +69,8 @@ import PreBoda from "./parts/PreBoda.astro";
     </div>
     <div class="party__text">
       <p>
-        Información adicional para los invitados. Peluquerias, tiendas, dónde
-        comer...
+        Información adicional para los invitados. Peluquerias, hoteles, tiendas,
+        dónde comer...
       </p>
     </div>
 
