--- a/src/components/parts/MapIframe.astro
+++ b/src/components/parts/MapIframe.astro
@@ -1,7 +1,6 @@
 <div class="map-responsive">
   <iframe
-    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2905.558506094511!2d-4.267469923318906!3d43.2606738777291!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd490f9abb75d487%3A0xdb9c06f0841bc448!2sLos%20Molinos%20de%20Ruente!5e0!3m2!1sen!2ses!4v1691061989131!5m2!1sen!2ses"
-    width="600"
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2897.872432071267!2d-4.756672423478809!3d43.42149196738578!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd49eae22ca7e59b%3A0xa72d62a6c6ad52b8!2sBas%C3%ADlica%20de%20Santa%20Mar%C3%ADa%20del%20Concejo!5e0!3m2!1ses!2ses!4v1732128141664!5m2!1ses!2ses"
     height="450"
     frameborder="0"
     style="border:0"
