--- a/src/components/parts/PreBoda.astro
+++ b/src/components/parts/PreBoda.astro
@@ -1,15 +1,16 @@
 <section class="preboda">
   <div class="preboda__text">
     <p>
-      Vamos a celebrar la preboda el vienés 14 de junio, empezará sobre las
-      19:00h en la casa familiar de Inés, cerca de San Vicente de la Barquera,
-      Barrio de Santillán 10. Será algo informal en el jardín de la vivienda.
+      Vamos a celebrar la preboda el jueves 1 de mayo aprovechando las fiestas
+      de San Felipe en La Galguera. Empezará sobre las 15:00h con una comida
+      campestre en los campos de la ermita. Será una fiesta de prao algo
+      informal con verbena.
     </p>
   </div>
 
   <div class="preboda__iframe iframe-responsive">
     <iframe
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d362.4504546477573!2d-4.424198569467076!3d43.385311120587474!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd49a03b9687b1db%3A0x76e216c002137a2f!2sBo.%20Santill%C3%A1n%2C%209%2C%2039548%20San%20Vicente%20de%20la%20Barquera%2C%20Cantabria!5e0!3m2!1sen!2ses!4v1708886275237!5m2!1sen!2ses"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d744.060432236551!2d-4.7460843064920875!3d43.401080363005704!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd49eabe8adc8c13%3A0x9ff120633354a24d!2sIglesia%20De%20San%20Felipe!5e1!3m2!1ses!2ses!4v1732130000370!5m2!1ses!2ses"
       width="600"
       height="450"
       frameborder="0"
@@ -21,8 +22,8 @@
 
   <div class="preboda__help">
     <p>
-      No disponemos de mucho aparcamiento, por lo que se agradecerá que se
-      compartan los coches en la medida de lo posible.
+      Es un pueblo pequeño. Os recomendamos que en la medida de lo posible
+      compartais coche para llegar.
     </p>
     <p>
       Si necesitas ayuda para llegar, no dudes en ponerte en contacto con
