--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,20 +10,32 @@ import HelpUs from "../components/HelpUs.astro";
 import Instagram from "../components/Instagram.astro";
 ---
 
-<Layout title="Boda de Carlos e Inés">
-  <main class="container-lg h-screen">
-    <Header />
-    <div class="space-section"></div>
-    <CoverPhrase />
-    <div class="space-section"></div>
-    <CelebrationDetails />
-    <div class="space-section"></div>
-    <Party />
-    <div class="space-section"></div>
-    <Instagram />
-    <div class="space-section"></div>
-    <HelpUs />
-    <div class="space-section"></div>
-    <Footer autor="Inés y Carlos - 15 junio 2024" />
+<Layout title="Isa y Rubén se casan">
+  <main class="pagina container-lg h-screen">
+    <div class="tronco">
+      <Header />
+      <div class="space-section"></div>
+      <CoverPhrase />
+      <div class="space-section"></div>
+      <CelebrationDetails />
+      <div class="space-section"></div>
+      <Party />
+      <div class="space-section"></div>
+      <Instagram />
+      <div class="space-section"></div>
+      <HelpUs />
+      <div class="space-section"></div>
+      <Footer autor="#isayrubensecasan" />
+    </div>
   </main>
 </Layout>
+<style>
+  .pagina {
+    display: flex;
+  }
+  .tronco {
+    max-width: 800px;
+    margin: auto;
+    background-color: #f3edb3;
+  }
+</style>
