--- a/src/styles/variables/_color.scss
+++ b/src/styles/variables/_color.scss
@@ -1,14 +1,16 @@
 :root {
-    --color-bg-primary: #f5f4ee; /* Fondo principal */
-    --color-bg-secondary: #e1decc; /* Fondo secundario */
+    --color-bg-primary: #be2626; /* Fondo principal */
+    --color-bg-secondary: #a58e31; /* Fondo secundario */
+    --color-bg-tronco: navy;
     --color-accent-light: #c7aca4; /* Acento claro */
     --color-accent-medium: #7dada3; /* Acento medio */
-    --color-accent-dark: #264d63; /* Acento oscuro */
-    --color-highlight-light: #fae489; /* Resaltado claro */
-    --color-highlight-dark: #c79930; /* Resaltado oscuro */
+    --color-accent-dark: #000000; /* Acento oscuro */
+    --color-highlight-light: #8D93C5; /* Resaltado claro */
+    --color-highlight-dark: #8D93C5; /* Resaltado oscuro */
     --color-text-primary: #0e252b; /* Texto principal */
     --color-text-secondary: #8f6a44; /* Texto secundario */
     --color-text-alert: #893e3e; /* Alerta/Error */
+
 }
 // $color-bg-primary: #f5f4ee;
 // $color-bg-secondary: #e1decc;
@@ -23,13 +25,14 @@
 // $color-text-alert: #893e3e;
 
 
-$color-bg-primary: #f5f4ee; /* Fondo principal */
-$color-bg-secondary: #e1decc; /* Fondo secundario */
+$color-bg-primary: grey; /* Fondo principal */
+$color-bg-secondary: rgb(255, 255, 255); /* Fondo secundario */
+$color-bg-tronco: navy;
 $color-accent-light: #c7aca4; /* Acento claro */
 $color-accent-medium: #7dada3; /* Acento medio */
-$color-accent-dark: #264d63; /* Acento oscuro */
-$color-highlight-light: #fae489; /* Resaltado claro */
-$color-highlight-dark: #c79930; /* Resaltado oscuro */
-$color-text-primary: #0e252b; /* Texto principal */
+$color-accent-dark: #000000; /* Acento oscuro */
+$color-highlight-light: #8D93C5; /* Resaltado claro */
+$color-highlight-dark: #8D93C5; /* Resaltado oscuro */
+$color-text-primary: #010202; /* Texto principal */
 $color-text-secondary: #8f6a44; /* Texto secundario */
 $color-text-alert: #893e3e; /* Alerta/Error */
