--- a/src/components/CoverPhrase.astro
+++ b/src/components/CoverPhrase.astro
@@ -1,39 +1,23 @@
 ---
 import Icon from "./parts/Icon.astro";
 
-import CountdownTimer from './parts/CountdownTimer.astro';
+import CountdownTimer from "./parts/CountdownTimer.astro";
 
-const targetDate = "December 9, 2024 23:59:59"; // Fecha objetivo
+const targetDate = "May 3, 2025 21:59:59"; // Fecha objetivo
 ---
 
 <section class="container cover-phrase">
-  <p class="cover-phrase__quote">
-    <Icon icon="quotes-left" />
-  </p>
-
-  <p class="cover-phrase__phrase font-start-midnight">
-    Mamá, ¡Me voy a casar!
-  </p>
-
-  <p class="cover-phrase__quote">
-    <Icon icon="quotes-right" />
-  </p>
+  <h3 class="cover-phrase__phrase">Quedan</h3>
 </section>
-
-<section class="container cover-phrase">
-  <h5 class="cover-phrase__phrase">
-    Cuenta atrás hasta la publicación de Viento y Verdad:
-  </h5>
-
-</section>
-<CountdownTimer targetDate={targetDate} />
-
+<section class="countdown"><CountdownTimer targetDate={targetDate} /></section>
 
 <style lang="scss">
   @import "../styles/variables/_color.scss";
-
+  .countdown {
+    padding-bottom: 50px;
+  }
   .cover-phrase {
-    padding: 50px 0;
+    padding: 30px 0;
 
     .cover-phrase__quote {
       display: flex;
@@ -43,7 +27,7 @@ const targetDate = "December 9, 2024 23:59:59"; // Fecha objetivo
     }
     .cover-phrase__phrase {
       text-align: center;
-      font-size: 5rem;
+      font-size: 4rem;
       font-weight: 500;
       line-height: 65px;
       color: $color-accent-dark;
