--- a/src/components/parts/Modal.astro
+++ b/src/components/parts/Modal.astro
@@ -14,19 +14,19 @@ const { title, id, open, close } = Astro.props;
   id={id}
   class="modal fixed top-0 left-0 w-full h-full items-center justify-center hidden"
 >
-  <div
-    class="modal__content rounded-3xl relative animate__animated "
-  >
+  <div class="modal__content rounded-3xl relative animate__animated">
     <div>
       <button id={close} class="close-modal">
         <Icon name="mdi:close" class="close-icon" />
       </button>
 
       <div class="modal__title">
-        <h1 class="animate__animated animate__fadeInDown" slot="title">{title}</h1>
+        <h1 class="animate__animated animate__fadeInDown" slot="title">
+          {title}
+        </h1>
       </div>
 
-      <div class="modal__body animate__animated animate__fadeIn ">
+      <div class="modal__body animate__animated animate__fadeIn">
         <slot name="body" />
       </div>
 
@@ -57,7 +57,7 @@ const { title, id, open, close } = Astro.props;
       max-width: 600px;
       padding: 2rem;
       text-align: center;
-      background-image: url("/assets/images/fondo.jpg");
+      background-image: url("/assets/images/white-rice.jpg");
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-size: cover;
@@ -65,7 +65,7 @@ const { title, id, open, close } = Astro.props;
     .modal__title {
       h1 {
         margin-bottom: 1rem;
-        color: $color-accent-dark;
+        color: #8d93c5;
         font-weight: 700;
         font-size: 1.9rem;
       }
@@ -121,13 +121,13 @@ const { title, id, open, close } = Astro.props;
 
   modal.addEventListener("click", function (e) {
     if (e.target === modal) {
-    closeModalEvent(modal);
+      closeModalEvent(modal);
     }
   });
 
-function closeModalEvent(element) {
-  element.classList.add("hidden");
-  element.classList.remove("show");
-  document.body.classList.remove("modal-open");
-}
+  function closeModalEvent(element) {
+    element.classList.add("hidden");
+    element.classList.remove("show");
+    document.body.classList.remove("modal-open");
+  }
 </script>
