--- a/src/components/parts/Tips.astro
+++ b/src/components/parts/Tips.astro
@@ -13,8 +13,26 @@ import ListIcon from "./ListIcon.astro";
 
   <ListIcon
     tips="Alojamiento:"
-    description="Hostería El Cruce (habitación doble 60€ y triple 85€, decir que es para la boda de Inés y Carlos del 15 de junio)"
-    link="https://maps.app.goo.gl/RpBuPznLrT2ccKL1A"
+    description="Hotel Montemar ***"
+    link="https://maps.app.goo.gl/8dPX2RfxKJNcDENNA"
+  >
+    <span class="w-full">
+      <Icon icon="hotel" />
+    </span>
+  </ListIcon>
+  <ListIcon
+    tips="Alojamiento:"
+    description="Hotel Don Paco ***"
+    link="https://maps.app.goo.gl/12BYWL5W6Moyed4Y8"
+  >
+    <span class="w-full">
+      <Icon icon="hotel" />
+    </span>
+  </ListIcon>
+  <ListIcon
+    tips="Alojamiento:"
+    description="Hotel Paraiso ***"
+    link="https://maps.app.goo.gl/jK2xgt2JQv8fdv438"
   >
     <span class="w-full">
       <Icon icon="hotel" />
@@ -22,8 +40,8 @@ import ListIcon from "./ListIcon.astro";
   </ListIcon>
   <ListIcon
     tips="Peluquería señoras:"
-    description="Mónica Roldan Peluquería"
-    link="https://maps.app.goo.gl/EiMJcGhq9es6DYh6A"
+    description="Mar Peluqueria"
+    link="https://maps.app.goo.gl/FyRNoPCxya48tCxe8"
   >
     <span class="w-full">
       <Icon icon="secador" />
@@ -31,200 +49,149 @@ import ListIcon from "./ListIcon.astro";
   </ListIcon>
   <ListIcon
     tips="Peluquería señoras:"
-    description="Mygoya Peluqueros"
-    link="https://maps.app.goo.gl/pWmCR2qmPo6LwU857"
+    description="Conchi Peláez"
+    link="https://maps.app.goo.gl/XARS4Mn44CcJi71T8"
   >
     <span class="w-full">
       <Icon icon="secador" />
     </span>
   </ListIcon>
   <ListIcon
-    tips="Peluquería señoras:"
-    description="Pelillos a la mar"
-    link="https://maps.app.goo.gl/8S6LofoDjMsJuCXq8"
+    tips="Peluquería unisex:"
+    description="Javier Peluqueros"
+    link="https://www.instagram.com/javierpeluqueros.llanes/?hl=es"
   >
     <span class="w-full">
       <Icon icon="secador" />
     </span>
   </ListIcon>
-  <ListIcon
-    tips="Peluquería/Barbería caballeros:"
-    description="Peluquería Andreu"
-    link="https://maps.app.goo.gl/paa9FVk5vJxBMnQC8"
-  >
-    <span class="w-full">
-      <Icon icon="secador" />
-    </span>
-  </ListIcon>
-  <ListIcon
-    tips="Estética:"
-    description="Estética Alma Belleza&Salud"
-    link="https://maps.app.goo.gl/dBnEYN9o8Wwp1WmUA"
-  >
-    <span class="w-full">
-      <Icon icon="pintalabio" />
-    </span>
-  </ListIcon>
-  <ListIcon
-    tips="Estética:"
-    description="Centro de Estética Nuria Banque"
-    link="https://maps.app.goo.gl/3DQdnVk9aGuQ9Ge7A"
-  >
-    <span class="w-full">
-      <Icon icon="pintalabio" />
-    </span>
-  </ListIcon>
-  <ListIcon
-    tips="Estética:"
-    description="Mónica Roldan Peluquería"
-    link="https://maps.app.goo.gl/EiMJcGhq9es6DYh6A"
-  >
-    <span class="w-full">
-      <Icon icon="pintalabio" />
-    </span>
-  </ListIcon>
-  <ListIcon
-    tips="Pub/Bar:"
-    description="La Farándula en Comillas"
-    link="https://maps.app.goo.gl/SqaLxE6KYofCYdM59"
-  >
-    <span class="w-full">
-      <Icon icon="bar" />
-    </span>
-  </ListIcon>
-  <ListIcon
-    tips="Pub/Bar:"
-    description="El Jardín en Cabezón de la Sal"
-    link="https://maps.app.goo.gl/ed6vxAbnUMZsgUQ68"
-  >
-    <span class="w-full">
-      <Icon icon="bar" />
-    </span>
-  </ListIcon>
-  <ListIcon
-    tips="Pub/Bar:"
-    description="El Reino en Cabezón de la Sal"
-    link="https://maps.app.goo.gl/GmRptewU5nFCyw4u9"
-  >
-    <span class="w-full">
-      <Icon icon="bar" />
-    </span>
-  </ListIcon>
-  <ListIcon
-    tips="Pub/Bar:"
-    description="Bar El Soti en Cabezón de la Sal"
-    link="https://maps.app.goo.gl/t8ssw8EuZgj321tC7"
-  >
-    <span class="w-full">
-      <Icon icon="bar" />
-    </span>
-  </ListIcon>
-  <ListIcon
-    tips="Pub/Bar:"
-    description="Café Vinilo (desayuno, aperitivo)"
-    link="https://maps.app.goo.gl/jVzSDARGaR2gF5i18"
-  >
-    <span class="w-full">
-      <Icon icon="bar" />
-    </span>
-  </ListIcon>
-  <ListIcon
-    tips="Cafeteria/Restaurante:"
-    description="Restaurante El Café (desayuno, aperitivo, comida y cena)"
-    link="https://maps.app.goo.gl/jbLJQ4fFGCj8Xhb18"
-  >
-    <span class="w-full">
-      <Icon icon="restaurant" />
-    </span>
-  </ListIcon>
-  <ListIcon
-    tips="Cafeteria/Restaurante:"
-    description="El Paraíso (desayuno, aperitivo, comida y cena)"
-    link="https://maps.app.goo.gl/K8qUtLeH3P7H97vJ8"
-  >
-    <span class="w-full">
-      <Icon icon="restaurant" />
-    </span>
-  </ListIcon>
-  <ListIcon
-    tips="Cafeteria/Restaurante:"
-    description="Restaurante El Cruce (desayuno, aperitivo, comida y cena)"
-    link="https://maps.app.goo.gl/ToesQSZ1LGA6E6798"
-  >
-    <span class="w-full">
-      <Icon icon="restaurant" />
-    </span>
-  </ListIcon>
-  <ListIcon
-    tips="Cafeteria/Restaurante:"
-    description="Cafetería Avenida (desayuno, aperitivo)"
-    link="https://maps.app.goo.gl/4LCvHiC6QHCGyzL27"
-  >
-    <span class="w-full">
-      <Icon icon="restaurant" />
-    </span>
-  </ListIcon>
-  <ListIcon
-    tips="Bazar/Mercería:"
-    description="Encarnita"
-    link="https://maps.app.goo.gl/pYFF5ZC9dBygQTbc7"
-  >
-    <span class="w-full">
-      <Icon icon="merceria" />
-    </span>
-  </ListIcon>
-  <ListIcon
-    tips="Bazar/Mercería:"
-    description="Amigo Super Euro Bazar"
-    link="https://maps.app.goo.gl/Hu2apiuRq9BDDurb6"
-  >
-    <span class="w-full">
-      <Icon icon="merceria" />
-    </span>
-  </ListIcon>
-  <ListIcon
-    tips="Supermercado:"
-    description="Maestegui"
-    link="https://maps.app.goo.gl/gjRYHWzLLGaWVxgq8"
-  >
-    <span class="w-full">
-      <Icon icon="supermarket" />
-    </span>
-  </ListIcon>
-  <ListIcon
-    tips="Supermercado:"
-    description="Lupa"
-    link="https://maps.app.goo.gl/uGsD7xdyF4PL9PzZA"
-  >
-    <span class="w-full">
-      <Icon icon="supermarket" />
-    </span>
-  </ListIcon>
+</div>
+<ListIcon
+  tips="Estética:"
+  description="Tamara Bueres"
+  link="https://maps.app.goo.gl/ZFT5VUap2mTkg1CGA"
+>
+  <span class="w-full">
+    <Icon icon="pintalabio" />
+  </span>
+</ListIcon>
+<ListIcon
+  tips="Cafeteria:"
+  description="Heladería Revuelta"
+  link="https://maps.app.goo.gl/XnRHiWAVmUvDAZr89"
+>
+  <span class="w-full">
+    <Icon icon="restaurant" />
+  </span>
+</ListIcon>
+<ListIcon
+  tips="Cafeteria:"
+  description="Cafetería El Latino"
+  link="https://maps.app.goo.gl/xpqYnLjHxwDvm89d6"
+>
+  <span class="w-full">
+    <Icon icon="restaurant" />
+  </span>
+</ListIcon>
+<ListIcon
+  tips="Cafeteria:"
+  description="Xana Cafetería"
+  link="https://maps.app.goo.gl/iK6cRzoF9WqStAbN9"
+>
+  <span class="w-full">
+    <Icon icon="restaurant" />
+  </span>
+</ListIcon>
+<ListIcon
+  tips="Sidrería:"
+  description="La Casería de Santa Marina"
+  link="https://maps.app.goo.gl/bjYGmGHxjWmH3sc76"
+>
+  <span class="w-full">
+    <Icon icon="restaurant" />
+  </span>
+</ListIcon>
+<ListIcon
+  tips="Sidrería:"
+  description="La Amistad"
+  link="https://maps.app.goo.gl/2e4jrZpu3o5Hg8kPA"
+>
+  <span class="w-full">
+    <Icon icon="restaurant" />
+  </span>
+</ListIcon>
+<ListIcon
+  tips="Sidrería:"
+  description="El Bodegón"
+  link="https://maps.app.goo.gl/1AZyreqRcdaWW5ws6"
+>
+  <span class="w-full">
+    <Icon icon="restaurant" />
+  </span>
+</ListIcon>
+<ListIcon
+  tips="Bazar/Mercería:"
+  description="Encarnita"
+  link="https://maps.app.goo.gl/pYFF5ZC9dBygQTbc7"
+>
+  <span class="w-full">
+    <Icon icon="merceria" />
+  </span>
+</ListIcon>
+<ListIcon
+  tips="Mercería:"
+  description="Almacenes Covadonga"
+  link="https://maps.app.goo.gl/Hu2apiuRq9BDDurb6"
+>
+  <span class="w-full">
+    <Icon icon="merceria" />
+  </span>
+</ListIcon>
+<ListIcon
+  tips="Supermercado:"
+  description="Alimerka"
+  link="https://maps.app.goo.gl/gjRYHWzLLGaWVxgq8"
+>
+  <span class="w-full">
+    <Icon icon="supermarket" />
+  </span>
+</ListIcon>
+<ListIcon
+  tips="Supermercado:"
+  description="Día"
+  link="https://maps.app.goo.gl/uGsD7xdyF4PL9PzZA"
+>
+  <span class="w-full">
+    <Icon icon="supermarket" />
+  </span>
+</ListIcon>
 
-  <p class="my-4">Cabezón cuenta con uno de los mejores hojaldres de Cantabria, no te vayas sin probarlo y llevarte un poquito para compartirlo.</p>
+<p class="my-4">
+  Recomendación de la novia, en el Fito encontrareis las mejores palmeras de
+  chocolate del mundo.
+</p>
 
-  <ListIcon
-    tips="Confitería/Pastelería:"
-    description="Confitería Milhojas"
-    link="https://maps.app.goo.gl/zVtrkSPuZvxGZFRD6"
-  >
-    <span class="w-full">
-      <Icon icon="pastel" />
-    </span>
-  </ListIcon>
-  <ListIcon
-    tips="Confitería/Pastelería:"
-    description="Las Hijas de Pedro"
-    link=" https://www.google.com/maps/place/Confiter%C3%ADa+Milhojas/@43.3073984,-4.2374364,17z/data=!3m1!4b1!4m6!3m5!1s0xd490e219749737d:0x3822813ffe5cf4d1!8m2!3d43.3073984!4d-4.2374364!16s%2Fg%2F11c531v_5c?hl=es&entry=ttu"
-  >
-    <span class="w-full">
-      <Icon icon="pastel" />
-    </span>
-  </ListIcon>
+<ListIcon
+  tips="Confitería/Pastelería:"
+  description="Confitería El Fito"
+  link="https://maps.app.goo.gl/zVtrkSPuZvxGZFRD6"
+>
+  <span class="w-full">
+    <Icon icon="pastel" />
+  </span>
+</ListIcon>
+<ListIcon
+  tips="Confitería/Pastelería:"
+  description="Confitería Vega"
+  link=" https://www.google.com/maps/place/Confiter%C3%ADa+Milhojas/@43.3073984,-4.2374364,17z/data=!3m1!4b1!4m6!3m5!1s0xd490e219749737d:0x3822813ffe5cf4d1!8m2!3d43.3073984!4d-4.2374364!16s%2Fg%2F11c531v_5c?hl=es&entry=ttu"
+>
+  <span class="w-full">
+    <Icon icon="pastel" />
+  </span>
+</ListIcon>
 
-  <div class="mt-5">
-    <p class="font-bold">¡Si tienes alguna duda contáctanos!</p>
-  </div>
+<div class="mt-5">
+  <p class="font-bold">¡Si tienes alguna duda contáctanos!</p>
 </div>
 
 <style lang="scss">
