--- a/src/styles/mixins/_fonts.scss
+++ b/src/styles/mixins/_fonts.scss
@@ -19,18 +19,19 @@
     font-style: normal;
 }
 @font-face {
-    font-family: "Montserrat", serif;
-    src: url('/fonts/Montserrat-VariableFont_wght.ttf') format('ttf');
+    font-family: 'Montserrat';
+    src: url('/fonts/Montserrat-Regular.woff') format('woff'),
+         url('/fonts/Montserrat-VariableFont_wght.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-  }
+}
 
-  @font-face {
-    font-family: "Dancing_Script", cursive;
-    src: url('/fonts/DancingScript-VariableFont_wght.ttf') format('ttf');
+@font-face {
+    font-family: "Dancing_Script";
+    src: url('/fonts/DancingScript-VariableFont_wght.woff') format('woff');
     font-weight: normal;
     font-style: italic;
-  }
+}
 
 // For title
 @mixin mx-font-gilda {
@@ -48,13 +49,12 @@
     font-family: 'barlowregular';
 
 }
-@mixin mx-font-montserrat {
-    // font-family: 'barlowregular';
-    font-family: "Montserrat", serif;
 
+@mixin mx-font-montserrat {
+    font-family: 'Montserrat', sans-serif;
 }
 
 @mixin mx-font-dancing {
-    font-family:"Dancing_Script", cursive;
+    font-family:"Dancing_Script";
     font-style: italic;
 }
