--- a/src/components/Instagram.astro
+++ b/src/components/Instagram.astro
@@ -13,17 +13,17 @@ import Icon from "./parts/Icon.astro";
         <span
           class="icon-container icon-instagram invisible animate__animated animate__slow"
         >
-          <Icon icon="instagram" />
+          <Icon icon="dress2" />
         </span>
       </div>
 
       <div class="instagram__info">
-        <h2 class="title-block">Compartimos este día junto a ti</h2>
-        <p>¡Sube tus fotos y vídeos!</p>
+        <h2 class="title-block">Participa y gana</h2>
+        <p>Juega a adivinar el look de la novia</p>
         <a
-          href="https://www.instagram.com/ines_carlos_2024"
+          href="https://forms.gle/V572cX4Hy5JsDQX29"
           target="_blank"
-          class="button-link">ver en Instagram</a
+          class="button-link">¡A jugar!</a
         >
       </div>
     </div>
