--- a/src/components/Party.astro
+++ b/src/components/Party.astro
@@ -68,10 +68,7 @@ import PreBoda from "./parts/PreBoda.astro";
       </span>
     </div>
     <div class="party__text">
-      <p>
-        Información adicional para los invitados. Peluquerias, hoteles, tiendas,
-        dónde comer...
-      </p>
+      <p>Información adicional para los invitados. Peluquerias, hoteles...</p>
     </div>
 
     <button id="openModalTips" class="button-link party__button"
@@ -88,7 +85,7 @@ import PreBoda from "./parts/PreBoda.astro";
     <div class="flex justify-center items-center flex-col" slot="body">
       <PreBoda />
       <a
-        href="https://maps.app.goo.gl/o44rXDraYVYCajLu7"
+        href="https://maps.app.goo.gl/7v7vz3b3sqsK5XLC6"
         target="blank"
         class="button-link"
         slot="footer">Ampliar mapa</a
@@ -104,7 +101,7 @@ import PreBoda from "./parts/PreBoda.astro";
   >
     <PlayListIframe slot="body" />
     <a
-      href="https://www.youtube.com/playlist?list=PLn6psApLjE88WUhspeTS_TM489Uxgb4Xi&jct=qhtRw-fBoNH14l7WPKY4DJXpdyIzxg"
+      href="https://forms.gle/a6T66nq8TcFKEhKJ7"
       target="blank"
       class="button-link"
       slot="footer">Añadir canción</a
