--- a/src/components/parts/EventTimes.astro
+++ b/src/components/parts/EventTimes.astro
@@ -46,7 +46,7 @@ const linkBusMolinos = "https://maps.app.goo.gl/4wk4cMiGaCjTVRgA7";
     <a href={linkBusMolinos} target="_blank">
       <h3 class="bus-time__title">Finca Las Nieves</h3>
       <p class="bus-time__text">
-        <strong>Llegada:</strong> Por determinar
+        <strong>Salida:</strong> Por determinar
         <br />
         <strong>Lugar:</strong> Finca Las Nieves
       </p>
