--- a/src/components/parts/PlayListIframe.astro
+++ b/src/components/parts/PlayListIframe.astro
@@ -1,15 +1,11 @@
 <section class="playlist">
   <div class="playlist__text">
-    <p>
-      Queremos hacer una lista de canciones que sea única y personalizada según
-      nuestros gustos. Anímate y añade la canción o
-      canciones que te gustaría escuchar en la boda.
-    </p>
+    <p>Añade la cancion que no puede faltar en nuestra boda</p>
   </div>
 
   <div class="playlist__iframe iframe-responsive">
     <iframe
-      src="https://www.youtube.com/embed/videoseries?si=22ZbB6M7UziTDnQ5&list=PLn6psApLjE88WUhspeTS_TM489Uxgb4Xi"
+      src="https://www.youtube.com/embed/XH9jnG1Ylwc"
       width="500"
       height="350"
       title="YouTube video player"
@@ -21,16 +17,7 @@
   </div>
 
   <div class="playlist__help">
-    <ol class="list-decimal text-start">
-      <li>Pulsa el botón de "Añadir canción". *</li>
-      <li>Acepta que quieres colaborar con la lista de reproducción.</li>
-      <li>La lista reproducción pasará a pertenecer a tus listas.</li>
-      <li><strong>¡Ya puedes añadir las canciones que quieras!</strong></li>
-    </ol>
-
-    <small class="playlist__small"
-      >* Tienes que tener una cuenta Gmail y estar logueado en YouTube</small
-    >
+    <small class="playlist__small"></small>
   </div>
 </section>
 
