--- a/src/components/parts/PreBoda.astro
+++ b/src/components/parts/PreBoda.astro
@@ -3,14 +3,14 @@
     <p>
       Vamos a celebrar la preboda el jueves 1 de mayo aprovechando las fiestas
       de San Felipe en La Galguera. Empezará sobre las 15:00h con una comida
-      campestre en los campos de la ermita. Será una fiesta de prao algo
-      informal con verbena.
+      campestre en los campos de la ermita. Será una fiesta de prao informal con
+      verbena.
     </p>
   </div>
 
   <div class="preboda__iframe iframe-responsive">
     <iframe
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d744.060432236551!2d-4.7460843064920875!3d43.401080363005704!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd49eabe8adc8c13%3A0x9ff120633354a24d!2sIglesia%20De%20San%20Felipe!5e1!3m2!1ses!2ses!4v1732130000370!5m2!1ses!2ses"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11595.39414233398!2d-4.756012274377035!3d43.40109513015782!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd49eabe8adc8c13%3A0x9ff120633354a24d!2sIglesia%20De%20San%20Felipe!5e0!3m2!1ses!2ses!4v1732563243715!5m2!1ses!2ses"
       width="600"
       height="450"
       frameborder="0"
