--- a/src/components/parts/Tips.astro
+++ b/src/components/parts/Tips.astro
@@ -6,11 +6,10 @@ import ListIcon from "./ListIcon.astro";
 <div>
   <div class="mb-5">
     <p class="bus-time__text-return">
-      Servicios destacados y que recomendamos para los invitados en Cabezón de
-      la Sal y alrededores.
+      Recomendaciones para los invitados en Llanes y alrededores.
     </p>
   </div>
-
+  <p>-- Alojamientos --</p>
   <ListIcon
     tips="Alojamiento:"
     description="Hotel Montemar ***"
@@ -38,6 +37,7 @@ import ListIcon from "./ListIcon.astro";
       <Icon icon="hotel" />
     </span>
   </ListIcon>
+  <p>-- Peluqueria y Estética --</p>
   <ListIcon
     tips="Peluquería señoras:"
     description="Mar Peluqueria"
@@ -75,6 +75,7 @@ import ListIcon from "./ListIcon.astro";
     <Icon icon="pintalabio" />
   </span>
 </ListIcon>
+<p>-- Cafeterías --</p>
 <ListIcon
   tips="Cafeteria:"
   description="Heladería Revuelta"
@@ -102,6 +103,7 @@ import ListIcon from "./ListIcon.astro";
     <Icon icon="restaurant" />
   </span>
 </ListIcon>
+<p>-- Sidrerías --</p>
 <ListIcon
   tips="Sidrería:"
   description="La Casería de Santa Marina"
@@ -129,28 +131,21 @@ import ListIcon from "./ListIcon.astro";
     <Icon icon="restaurant" />
   </span>
 </ListIcon>
-<ListIcon
-  tips="Bazar/Mercería:"
-  description="Encarnita"
-  link="https://maps.app.goo.gl/pYFF5ZC9dBygQTbc7"
->
-  <span class="w-full">
-    <Icon icon="merceria" />
-  </span>
-</ListIcon>
+<p>-- Mercerías --</p>
 <ListIcon
   tips="Mercería:"
   description="Almacenes Covadonga"
-  link="https://maps.app.goo.gl/Hu2apiuRq9BDDurb6"
+  link="https://maps.app.goo.gl/QbW5Yv933FF4788J7"
 >
   <span class="w-full">
     <Icon icon="merceria" />
   </span>
 </ListIcon>
+<p>-- Supermercados --</p>
 <ListIcon
   tips="Supermercado:"
   description="Alimerka"
-  link="https://maps.app.goo.gl/gjRYHWzLLGaWVxgq8"
+  link="https://maps.app.goo.gl/69ErbxF5pZ94uzuHA"
 >
   <span class="w-full">
     <Icon icon="supermarket" />
@@ -159,22 +154,21 @@ import ListIcon from "./ListIcon.astro";
 <ListIcon
   tips="Supermercado:"
   description="Día"
-  link="https://maps.app.goo.gl/uGsD7xdyF4PL9PzZA"
+  link="https://maps.app.goo.gl/X3Q8z9Ts47w237GN6"
 >
   <span class="w-full">
     <Icon icon="supermarket" />
   </span>
 </ListIcon>
-
+<p>-- Pastelerías --</p>
 <p class="my-4">
   Recomendación de la novia, en el Fito encontrareis las mejores palmeras de
   chocolate del mundo.
 </p>
-
 <ListIcon
   tips="Confitería/Pastelería:"
   description="Confitería El Fito"
-  link="https://maps.app.goo.gl/zVtrkSPuZvxGZFRD6"
+  link="https://maps.app.goo.gl/KJuGvrSKffWMnoyR7"
 >
   <span class="w-full">
     <Icon icon="pastel" />
@@ -183,7 +177,7 @@ import ListIcon from "./ListIcon.astro";
 <ListIcon
   tips="Confitería/Pastelería:"
   description="Confitería Vega"
-  link=" https://www.google.com/maps/place/Confiter%C3%ADa+Milhojas/@43.3073984,-4.2374364,17z/data=!3m1!4b1!4m6!3m5!1s0xd490e219749737d:0x3822813ffe5cf4d1!8m2!3d43.3073984!4d-4.2374364!16s%2Fg%2F11c531v_5c?hl=es&entry=ttu"
+  link="https://maps.app.goo.gl/UbeHqCdNRdqR8h4EA"
 >
   <span class="w-full">
     <Icon icon="pastel" />
