--- a/src/components/parts/ClipBoard.astro
+++ b/src/components/parts/ClipBoard.astro
@@ -33,7 +33,7 @@ const { id, text, name } = Astro.props;
       display: grid;
       place-items: center;
       text-wrap: balance;
-      background-color: $color-bg-primary;
+      background-color: #f3edb3;
       color: $color-accent-dark;
       border-radius: 25px 0 0 25px;
       border: 1px solid $color-accent-dark;
@@ -44,7 +44,7 @@ const { id, text, name } = Astro.props;
     .btn-clipboard {
       width: 50px;
       color: $color-highlight-dark;
-      background-color: $color-bg-primary;
+      background-color: #f3edb3;
       border-radius: 0px 25px 25px 0px;
       border: 1px solid $color-accent-dark;
       border-left: none;
