--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,13 +9,20 @@ interface Props {
 const { title } = Astro.props;
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Boda de Ines y carlos - 15 junio 2024" />
+    <meta
+      name="description"
+      content="Boda de Isabel y Rubén - 3 de mayo de 2025"
+    />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/assets/images/favicon.ico" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/assets/images/iconopagina.ico"
+    />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
@@ -23,4 +30,3 @@ const { title } = Astro.props;
     <slot />
   </body>
 </html>
-
